# ai_trading_bot

./: .gitignore  .replit  Dockerfile  README.md  __main__.py  ai_trading_bot.html  app.html  index.html  main.py  pyproject.toml  pytest.ini  requirements.txt  search.js  server.html  server.py  setup.py  setup.sh  test_logic.html  wrapper_script.sh
 ai-trading-bot/: server.py
 ai-trading-bot/application/: __init__.py
 ai-trading-bot/tests/: ta_logic_test.py
.github/workflows/: deploy_to_gcp.yml  mk_docs.yml  publish_deploy_file.yml  run_tests.yml  test.yml
ai-trading-system/: requirements.txt  setup.py
ai-trading-system/src/: app.py  server.py  test_logic.py
ai_trading_bot/: app.py  application.html  config.html  main.html  main.py  server.html  server.py  test_logic.txt  tests.html
ai_trading_bot/application/: __init__.py  actions.html  clients.html  decorators.html  repositories.html  utils.html
ai_trading_bot/config/: config.html  config.py  events.html
ai_trading_bot/tests/: ta.html  ta_logic_test.py
application/: index.html
application/actions/: event_system.html  index.html  trading_system.html
application/clients/: ai_client.html  alpaca_client.html  index.html  logger_client.html  ta_client.html  yahoo_client.html
application/decorators/: trading.html
application/repositories/: alpaca_repository.html  index.html  ta_repository.html  yahoo_repository.html
config/: config.html  events.html
original_boilerplate/: handler.py
src/: app.html  server.html  test_logic.txt
src/config/: config.html  (+2 more)
tests/: index.html  test_ta_logic.html
(+85 files in other folders)
