[tool.poetry]
name = "aitradingbot"
version = "0.1.0"
description = ""
authors = ["FriendlyUser <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pyotp = "^2.6.0"
robin-stocks = "^2.0.3"
statsmodels = "^0.12.2"
telegram = "^0.0.1"
yfinance = "^0.1.59"
alpaca-trade-api = "^1.1.0"
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
